# landau-siegel-zero-tester

./: ComputePhiAndE.md  README.md
L1/: CMakeLists.txt  L1.c
misc/: ComputePhiAndE.md  bucket_counts.py  draw_his.py  fail_stat.py  find_fail.py  line_counter.py  lsum.c  precompute_kronecker.c  rigorousBound.c
src/: buffered_chi.c  buffered_chi.h  chi1.c  compute.c  compute.h  main.c  main_by_file.c  main_test_ind.c  presets.c  presets.h  primes.c  primes.h
test/: chi_test.c  computation_test.c  primes_test.c
